quest-sys/QuEST/QuEST/include/QuEST.h

    
typedef struct {
    char* buffer;       
    int bufferSize;     
    int bufferFill;     
    int isLogging;      
} QASMLogger;
typedef struct ComplexArray
{
    qreal *real; 
    qreal *imag;
} ComplexArray;
typedef struct Complex
{
    qreal real;
    qreal imag;
} Complex;
typedef struct ComplexMatrix2
{
    qreal real[2][2];
    qreal imag[2][2];
} ComplexMatrix2;
typedef struct ComplexMatrix4
{
    qreal real[4][4];
    qreal imag[4][4];
} ComplexMatrix4;
typedef struct ComplexMatrixN
{
  int numQubits;
  qreal **real;
  qreal **imag;
} ComplexMatrixN;
typedef struct Qureg
{
    int isDensityMatrix;
    int numQubitsRepresented;
    int numQubitsInStateVec;
    long long int numAmpsPerChunk;
    long long int numAmpsTotal;
    int chunkId;
    int numChunks;
    ComplexArray stateVec; 
    ComplexArray pairStateVec;
    ComplexArray deviceStateVec;
    qreal *firstLevelReduction, *secondLevelReduction;
    QASMLogger* qasmLog;
} Qureg;
typedef struct QuESTEnv
{
    int rank;
    int numRanks;
    unsigned long int* seeds;
    int numSeeds;
} QuESTEnv;
int getNumQubits(Qureg qureg);
long long int getNumAmps(Qureg qureg);
void reportQuESTEnv(QuESTEnv env);
void getEnvironmentString(QuESTEnv env, char str[200]);
Complex getAmp(Qureg qureg, long long int index);
qreal getRealAmp(Qureg qureg, long long int index);
qreal getImagAmp(Qureg qureg, long long int index);
qreal getProbAmp(Qureg qureg, long long int index);
Complex getDensityAmp(Qureg qureg, long long int row, long long int col);
qreal calcTotalProb(Qureg qureg);
void compactUnitary(Qureg qureg, int targetQubit, Complex alpha, Complex beta);
void unitary(Qureg qureg, int targetQubit, ComplexMatrix2 u);
void controlledCompactUnitary(Qureg qureg, int controlQubit, int targetQubit, Complex alpha, Complex beta);
void controlledUnitary(Qureg qureg, int controlQubit, int targetQubit, ComplexMatrix2 u);
void multiControlledUnitary(Qureg qureg, int* controlQubits, int numControlQubits, int targetQubit, ComplexMatrix2 u);
void multiStateControlledUnitary(Qureg qureg, int* controlQubits, int* controlState, int numControlQubits, int targetQubit, ComplexMatrix2 u);
void twoQubitUnitary(Qureg qureg, int targetQubit1, int targetQubit2, ComplexMatrix4 u);
void multiQubitUnitary(Qureg qureg, int* targs, int numTargs, ComplexMatrixN u);
void applyMatrix2(Qureg qureg, int targetQubit, ComplexMatrix2 u);
void invalidQuESTInputError(const char* errMsg, const char* errFunc);