quest-sys/src/bindings.rs

extern "C" {
    #[doc = " Report information about the QuEST environment"]
    #[doc = ""]
    #[doc = " @ingroup debug"]
    #[doc = " @param[in] env object representing the execution environment. A single instance is used for each program"]
    #[doc = " @author Ania Brown"]
    pub fn reportQuESTEnv(env: QuESTEnv);
}
extern "C" {
    #[doc = " Sets \\p str to a string containing information about the runtime environment,"]
    #[doc = " including whether simulation is using CUDA (for GPU), OpenMP (for multithreading)"]
    #[doc = " and/or MPI (for distribution). The number of CPU threads and distributed ranks is"]
    #[doc = " also reported. Note there is currently no reporting of the number of GPU cores used."]
    #[doc = ""]
    #[doc = " The string format is:"]
    #[doc = " ```"]
    #[doc = " \"CUDA=b OpenMP=b MPI=b threads=n ranks=n\""]
    #[doc = " ```"]
    #[doc = " where <b>b</b> is 0 or 1, and <b>n</b> are integers."]
    #[doc = ""]
    #[doc = " @ingroup debug"]
    #[doc = " @param[in] env object representing the execution environment. A single instance is used for each program"]
    #[doc = " @param[out] str to be populated with the output string"]
    #[doc = " @author Ania Brown"]
    #[doc = " @author Tyson Jones"]
    pub fn getEnvironmentString(env: QuESTEnv, str_: *mut ::std::os::raw::c_char);
}
extern "C" {
    #[doc = " Get the complex amplitude at a given index in the state vector."]
    #[doc = ""]
    #[doc = " @see"]
    #[doc = " - getDensityAmp()"]
    #[doc = " - getRealAmp()"]
    #[doc = " - getImagAmp()"]
    #[doc = " - getProbAmp()"]
    #[doc = " - getNumAmps()"]
    #[doc = " - getNumQubits()"]
    #[doc = ""]
    #[doc = " @ingroup calc"]
    #[doc = " @param[in] qureg object representing a set of qubits"]
    #[doc = " @param[in] index index in state vector of probability amplitudes"]
    #[doc = " @return amplitude at index, returned as a Complex struct (with .real and .imag attributes)"]
    #[doc = " @throws invalidQuESTInputError()"]
    #[doc = " - if \\p qureg is a density matrix"]
    #[doc = " - if \\p index is outside [0, \\f$2^{N}\\f$) where \\f$N = \\f$ \\p qureg.numQubitsRepresented"]
    #[doc = " @author Tyson Jones"]
    pub fn getAmp(qureg: Qureg, index: ::std::os::raw::c_longlong) -> Complex;
}
extern "C" {
    #[doc = " Get the real component of the complex probability amplitude at an index in the state vector."]
    #[doc = ""]
    #[doc = " @see"]
    #[doc = " - getAmp()"]
    #[doc = " - getDensityAmp()"]
    #[doc = " - getImagAmp()"]
    #[doc = " - getProbAmp()"]
    #[doc = " - getNumAmps()"]
    #[doc = " - getNumQubits()"]
    #[doc = ""]
    #[doc = " @ingroup calc"]
    #[doc = " @param[in] qureg object representing a set of qubits"]
    #[doc = " @param[in] index index in state vector of probability amplitudes"]
    #[doc = " @return real component at that index"]
    #[doc = " @throws invalidQuESTInputError()"]
    #[doc = " - if \\p qureg is a density matrix"]
    #[doc = " - if \\p index is outside [0, \\f$2^{N}\\f$) where \\f$N = \\f$ \\p qureg.numQubitsRepresented"]
    #[doc = " @author Ania Brown"]
    pub fn getRealAmp(qureg: Qureg, index: ::std::os::raw::c_longlong) -> f64;
}
extern "C" {
    #[doc = " Get the imaginary component of the complex probability amplitude at an index in the state vector."]
    #[doc = ""]
    #[doc = " @see"]
    #[doc = " - getAmp()"]
    #[doc = " - getDensityAmp()"]
    #[doc = " - getRealAmp()"]
    #[doc = " - getProbAmp()"]
    #[doc = " - getNumAmps()"]
    #[doc = " - getNumQubits()"]
    #[doc = ""]
    #[doc = " @ingroup calc"]
    #[doc = " @param[in] qureg object representing a set of qubits"]
    #[doc = " @param[in] index index in state vector of probability amplitudes"]
    #[doc = " @return imaginary component at that index"]
    #[doc = " @throws invalidQuESTInputError()"]
    #[doc = " - if \\p qureg is a density matrix"]
    #[doc = " - if \\p index is outside [0, \\f$2^{N}\\f$) where \\f$N = \\f$ \\p qureg.numQubitsRepresented"]
    #[doc = " @author Ania Brown"]
    pub fn getImagAmp(qureg: Qureg, index: ::std::os::raw::c_longlong) -> f64;
}
extern "C" {
    #[doc = " Get the probability of a state-vector at an index in the full state vector."]
    #[doc = ""]
    #[doc = " @see"]
    #[doc = " - getAmp()"]
    #[doc = " - getDensityAmp()"]
    #[doc = " - getRealAmp()"]
    #[doc = " - getImagAmp()"]
    #[doc = " - getNumAmps()"]
    #[doc = " - getNumQubits()"]
    #[doc = ""]
    #[doc = " @ingroup calc"]
    #[doc = " @param[in] qureg object representing a set of qubits"]
    #[doc = " @param[in] index index in state vector of probability amplitudes"]
    #[doc = " @return realEl*realEl + imagEl*imagEl"]
    #[doc = " @throws invalidQuESTInputError()"]
    #[doc = " - if \\p qureg is a density matrix"]
    #[doc = " - if \\p index is outside [0, \\f$2^{N}\\f$) where \\f$N = \\f$ \\p qureg.numQubitsRepresented"]
    #[doc = " @author Ania Brown"]
    pub fn getProbAmp(qureg: Qureg, index: ::std::os::raw::c_longlong) -> f64;
}
extern "C" {
    #[doc = " Get an amplitude from a density matrix at a given row and column."]
    #[doc = ""]
    #[doc = " @see"]
    #[doc = " - getAmp()"]
    #[doc = " - getRealAmp()"]
    #[doc = " - getImagAmp()"]
    #[doc = " - getProbAmp()"]
    #[doc = " - getNumAmps()"]
    #[doc = " - getNumQubits()"]
    #[doc = ""]
    #[doc = " @ingroup calc"]
    #[doc = " @param[in] qureg object representing a density matrix"]
    #[doc = " @param[in] row row of the desired amplitude in the density matrix"]
    #[doc = " @param[in] col column of the desired amplitude in the density matrix"]
    #[doc = " @return a Complex scalar representing the desired amplitude"]
    #[doc = " @throws invalidQuESTInputError()"]
    #[doc = " - if \\p qureg is a state-vector,"]
    #[doc = " - if \\p row or \\p col are outside [0, \\f$2^{N}\\f$) where \\f$N = \\f$ \\p qureg.numQubitsRepresented"]
    #[doc = " @author Tyson Jones"]
    pub fn getDensityAmp(
        qureg: Qureg,
        row: ::std::os::raw::c_longlong,
        col: ::std::os::raw::c_longlong,
    ) -> Complex;
}
extern "C" {
    #[doc = " A debugging function which calculates the probability of the qubits in \\p qureg"]
    #[doc = " being in any state, which should always be 1 for correctly normalised states"]
    #[doc = " (hence returning a real number)."]
    #[doc = " For state-vectors \\f$ \\psi \\f$, this is the norm of the entire state-vector"]
    #[doc = " (the sum of the absolute-value-squared of every amplitude):"]
    #[doc = " \\f["]
    #[doc = "      \\sum\\limits_i |\\psi_i|^2"]
    #[doc = " \\f]"]
    #[doc = " and for density matrices \\f$ \\rho \\f$, it is the trace:"]
    #[doc = " \\f["]
    #[doc = "      \\text{Trace}(\\rho) = \\sum\\limits_i \\rho_{i,i} \\;"]
    #[doc = " \\f]"]
    #[doc = ""]
    #[doc = " For un-normalised density matrices (those directly modified or initialised by the user),"]
    #[doc = " this function returns the real component of the trace."]
    #[doc = ""]
    #[doc = " Note this calculation utilises Kahan summation for greater accuracy, and hence is"]
    #[doc = " not parallelised and so will be slower than other functions."]
    #[doc = ""]
    #[doc = " @ingroup calc"]
    #[doc = " @param[in] qureg object representing a set of qubits"]
    #[doc = " @return the total probability of the qubits in \\p qureg being in any state"]
    #[doc = " @author Ania Brown (state-vector)"]
    #[doc = " @author Tyson Jones (density matrix, doc)"]
    pub fn calcTotalProb(qureg: Qureg) -> f64;
}
extern "C" {
    #[doc = " Apply a single-qubit unitary parameterised by two given complex scalars."]
    #[doc = " Given valid complex numbers \\f$\\alpha\\f$ and \\f$\\beta\\f$, applies the unitary"]
    #[doc = " \\f["]
    #[doc = " U ="]
    #[doc = " \\begin{pmatrix}"]
    #[doc = " \\alpha & -\\beta^* \\\\"]
    #[doc = " \\beta & \\alpha^*"]
    #[doc = " \\end{pmatrix}"]
    #[doc = " \\f]"]
    #[doc = " which is general up to a global phase factor."]
    #[doc = " Valid \\f$\\alpha\\f$, \\f$\\beta\\f$ satisfy \\f$|\\alpha|^2 + |\\beta|^2 = 1\\f$."]
    #[doc = ""]
    #[doc = "\\f["]
    #[doc = "\\begin{tikzpicture}[scale=.5]"]
    #[doc = "\\node[draw=none] at (-3.5, 0) {target};"]
    #[doc = ""]
    #[doc = "\\draw (-2,0) -- (-1, 0);"]
    #[doc = "\\draw (1, 0) -- (2, 0);"]
    #[doc = "\\draw (-1,-1)--(-1,1)--(1,1)--(1,-1)--cycle;"]
    #[doc = "\\node[draw=none] at (0, 0) {U};"]
    #[doc = "\\end{tikzpicture}"]
    #[doc = "\\f]"]
    #[doc = ""]
    #[doc = " @see"]
    #[doc = " - controlledCompactUnitary()"]
    #[doc = " - unitary()"]
    #[doc = " - twoQubitUnitary()"]
    #[doc = " - multiQubitUnitary()"]
    #[doc = ""]
    #[doc = " @ingroup unitary"]
    #[doc = " @param[in,out] qureg object representing the set of all qubits"]
    #[doc = " @param[in] targetQubit qubit to operate on"]
    #[doc = " @param[in] alpha complex unitary parameter (row 1, column 1)"]
    #[doc = " @param[in] beta complex unitary parameter (row 2, column 1)"]
    #[doc = " @throws invalidQuESTInputError()"]
    #[doc = " - if \\p targetQubit is outside [0, \\p qureg.numQubitsRepresented)"]
    #[doc = " - if \\p alpha, \\p beta don't satisfy |`alpha`|^2 + |`beta`|^2 = 1"]
    #[doc = " @author Ania Brown (state-vector)"]
    #[doc = " @author Tyson Jones (density matrix, doc)"]
    pub fn compactUnitary(
        qureg: Qureg,
        targetQubit: ::std::os::raw::c_int,
        alpha: Complex,
        beta: Complex,
    );
}
extern "C" {
    #[doc = " Apply a general single-qubit unitary (including a global phase factor)."]
    #[doc = " The passed 2x2 ComplexMatrix must be unitary, otherwise an error is thrown."]
    #[doc = ""]
    #[doc = "\\f["]
    #[doc = "\\begin{tikzpicture}[scale=.5]"]
    #[doc = "\\node[draw=none] at (-3.5, 0) {target};"]
    #[doc = ""]
    #[doc = "\\draw (-2,0) -- (-1, 0);"]
    #[doc = "\\draw (1, 0) -- (2, 0);"]
    #[doc = "\\draw (-1,-1)--(-1,1)--(1,1)--(1,-1)--cycle;"]
    #[doc = "\\node[draw=none] at (0, 0) {U};"]
    #[doc = "\\end{tikzpicture}"]
    #[doc = "\\f]"]
    #[doc = ""]
    #[doc = " If \\p qureg is a state-vector, then the resulting state is \\f$ u \\, |\\text{qureg}\\rangle \\f$.\\n"]
    #[doc = " If \\p qureg is a density-matrix \\f$ \\rho \\f$, then the resulting state is \\f$ u \\, \\rho \\, u^\\dagger \\f$."]
    #[doc = ""]
    #[doc = " > Use applyMatrix2() to left-multiply a non-unitary ::ComplexMatrix2"]
    #[doc = ""]
    #[doc = " @see"]
    #[doc = " - ::ComplexMatrix2"]
    #[doc = " - controlledUnitary()"]
    #[doc = " - multiControlledUnitary()"]
    #[doc = " - multiStateControlledUnitary()"]
    #[doc = " - twoQubitUnitary()"]
    #[doc = " - multiQubitUnitary()"]
    #[doc = " - applyMatrix2()"]
    #[doc = " - compactUnitary()"]
    #[doc = ""]
    #[doc = " @ingroup unitary"]
    #[doc = " @param[in,out] qureg object representing the set of all qubits"]
    #[doc = " @param[in] targetQubit qubit to operate on"]
    #[doc = " @param[in] u unitary matrix to apply"]
    #[doc = " @throws invalidQuESTInputError()"]
    #[doc = " - if \\p targetQubit is outside [0, \\p qureg.numQubitsRepresented)"]
    #[doc = " - if matrix \\p u is not unitary"]
    #[doc = " @author Ania Brown (state-vector)"]
    #[doc = " @author Tyson Jones (density matrix, doc)"]
    pub fn unitary(qureg: Qureg, targetQubit: ::std::os::raw::c_int, u: ComplexMatrix2);
}
